src/partial/components/popup-confirm/popup-confirm.scss
@import '/src/utils/variables';

.popup-confirm {
	display: none;
	width: 270px;
	position: absolute;
	top: 70px;
	right: 0;
	padding: 10px;
	background-color: $white-color;
	border-radius: $border-radius;
	border: 1px solid $dark-gray-color;

	&__title {
		text-align: center;
		margin-bottom: 30px;
	}

	&__actions {
		display: flex;
		justify-content: space-between;
	}
}

